buttons are now in wrapped divs and in the correct relative places

--- a/style.css
+++ b/style.css
@@ -99,3 +99,14 @@ input:checked + .slider:before {
     flex-direction: column;
     align-items: stretch; 
 }
+
+/* used to make label for beep switch vertically centered */
+#beep_switch_label{
+    display:inline;
+    line-height: 34px;
+}
+#beep_wrapper{
+    text-align: center;
+    height: 34px;
+    line-height: 34px;
+}
